# profine-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
example/nanoGPT/: bench.py  model.py
example/qwen3.5/: train.py
examples/nanoGPT/: sample.py  train.py
profine/: __main__.py  auth.py  env_vars.py
profine/benchmarker/: __init__.py  benchmarker.py  comparator.py  prompts.py  report.py
profine/catalog/: __init__.py  entries.py  schema.py
profine/cli/: __init__.py  _console.py  _update_check.py  commands.py  errors.py  main.py  run_all_summary.py
profine/config/: catalog.yaml  hardware.yaml  kernel_patterns.yaml  patterns.yaml  settings.py  (+1 more)
scripts/: rebuild_telemetry_manifest.py
tests/: test_applicability.py  test_catalog.py  test_cli_dispatch.py  test_cli_telemetry_autoread.py  test_cli_telemetry_subcommand.py  test_comparator.py  test_config_defaults.py  test_editor_guardrails.py  test_editor_with_stub_llm.py  test_event_collector.py  test_extractor.py  test_image_builder.py  test_llm_parsing.py  test_modal_discovery.py  test_modal_executor_helpers.py  test_preferences.py  test_profiler_heuristics.py  test_remote_deps.py  test_schema_roundtrips.py  test_session_bugfix_regressions.py  test_stabilization.py  test_step_controller_adapt.py  test_telemetry_agent_priors.py  test_telemetry_consent.py  test_telemetry_emit.py  test_telemetry_fingerprint.py  test_telemetry_integrity.py  test_telemetry_mingpt.py  test_telemetry_priors.py  test_telemetry_profile_stats.py  test_telemetry_recorder.py  test_yaml_loader.py
(+112 files in other folders)
