[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "profine"
version = "0.3.4"
description = "Deterministic GPU training profiling and optimization CLI for PyTorch models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "profine"}]
keywords = ["gpu", "profiling", "pytorch", "training", "optimization"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click>=8.1.7",
  "rich>=13.7.1",
  "PyYAML>=6.0.1",
  "modal>=1.3.0",
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "python-dotenv>=1.0.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://profine.ai"
Repository = "https://github.com/ProfineAI/profine-cli"
Issues = "https://github.com/ProfineAI/profine-cli/issues"

[project.scripts]
profine = "profine.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["profine"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
